--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -78,6 +78,14 @@
                 serverText = newText;
             });
 
+            socket.on("disconnect", function(){
+                console.log("someone disconnected");
+            });
+
+            socket.on("usersUpdated", function(data){
+                console.log(data);
+            })
+
             /*
              * Event handler for the save button
              */
