--- a/index.hbs
+++ b/index.hbs
@@ -33,6 +33,7 @@
     </textarea>
   </form>
   <div id='dropzone'></div>
+  <iframe src="https://kiwiirc.com/client/chat.freenode.com/?nick=testnaaame|?&theme=basic#codefellows" style="border:0; width:100%; height:450px;"></iframe>
   <script>
     // start socket connection
     var socket = io.connect(window.location.origin);
@@ -67,7 +68,7 @@
       $("[name='clientCond']").on("change", function(e) {
         socket.emit("setStatus", $("[name='clientCond']").val() );
       });
-      
+
       $("[name='clientComment']").on("change", function(e) {
         socket.emit("setComment", $("[name='clientComment']").val() );
       });
