--- a/index.hbs
+++ b/index.hbs
@@ -33,7 +33,7 @@
     </textarea>
   </form>
   <div id='dropzone'></div>
-  <iframe src="https://kiwiirc.com/client/chat.freenode.com/?nick=testnaaame|?&theme=basic#codefellows" style="border:0; width:100%; height:450px;"></iframe>
+  <iframe src="https://kiwiirc.com/client/chat.freenode.com/?nick=testname|?&theme=basic#codefellows" style="border:0; width:100%; height:450px;"></iframe>
   <script>
     // start socket connection
     var socket = io.connect(window.location.origin);
@@ -60,6 +60,13 @@
       }
     });
 
+    //override form submit action
+    $('form').on('submit', function(e){
+      e.preventDefault();
+      //oh god this is hacky. TODO: split joining a class into a function
+      $("#joinClass").trigger("click");
+    });
+    
     $("#joinClass").on("click", function(e){
       e.preventDefault();
       var classroomId = $("[name='classroomId']").val();
