--- a/index.hbs
+++ b/index.hbs
@@ -38,8 +38,8 @@
     // start socket connection
     var socket = io.connect(window.location.origin);
 
-    // create classroom collection instance
-    App.classroom = new App.Classroom();
+    // create Students collection instance
+    App.students = new App.Students();
 
     // socket update behavior
     socket.on("update", function(data){
@@ -48,19 +48,19 @@
         temp.push({ id: index, status: elem.status, comment: elem.comment });
       });
 
-      App.classroom.reset(temp);
+      App.students.reset(temp);
 
-      if (App.classroomView) {
-        App.classroomView.el.innerHTML = '';
-        App.classroomView.render();
+      if (App.studentsView) {
+        App.studentsView.el.innerHTML = '';
+        App.studentsView.render();
       } else {
-        App.classroomView = new App.ClassroomView({
-          collection: App.classroom
+        App.studentsView = new App.StudentsView({
+          collection: App.students
         }); 
       }
     });
 
-    //override form submit action
+    //override form submit action, join classroom instead
     $('form').on('submit', function(e){
       e.preventDefault();
       //oh god this is hacky. TODO: split joining a class into a function
@@ -70,7 +70,9 @@
     $("#joinClass").on("click", function(e){
       e.preventDefault();
       var classroomId = $("[name='classroomId']").val();
-      socket.emit('joinClassroom', classroomId);
+      // below not wired to anything on page yet
+      var studentName = $("[name='studentName']").val();
+      socket.emit('studentJoinClassroom', classroomId, studentName);
 
       $("[name='clientCond']").on("change", function(e) {
         socket.emit("setStatus", $("[name='clientCond']").val() );
